--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ footer mail + tel   rgba(255, 255, 255, 0.6);
   --accent-color: #2196f3;
   --hero-footer-color: #2f303a;
   --title-color: #212121;
+  --adv-workarea-color: #f5f5f5;
   --typical-letter-spacing: 0.03em;
 }
 body {
@@ -103,8 +104,9 @@ body {
 }
 
 /*-----------ADVANTAGES------------*/
-.advantages {
-  background-color: #f5f5f5;
+.advantages,
+.workarea {
+  background-color: var(--adv-workarea-color);
 }
 .visually-hidden {
   position: absolute;
@@ -118,12 +120,16 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-.advantages-title {
+.advantages-title,
+.workarea-title-section,
+.team-title-section {
   color: var(--title-color);
   font-weight: 700;
+  letter-spacing: var(--typical-letter-spacing);
+}
+.advantages-title {
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: var(--typical-letter-spacing);
   text-transform: uppercase;
 }
 .advantages-text {
@@ -134,23 +140,39 @@ body {
 
 /*-----------WORKAREA------------*/
 .workarea-title-section {
-  color: var(--title-color);
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  letter-spacing: var(--typical-letter-spacing);
 }
 
-/*-----------WORKAREA------------*/
+/*-----------TEAM------------*/
 .team {
-  background-color: var(--team-color);
+  background-color: #f5f4fa;
+}
+.team-title-section {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.team-title {
+  color: var(--title-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: var(--typical-letter-spacing);
+}
+.team-text {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: var(--typical-letter-spacing);
 }
 
 /*-----------FOOTER------------*/
 .footer {
   color: var(--primary-white-color);
-  background-color: var(--footer-color);
+  background-color: var(--hero-footer-color);
 }
 .footer-logo {
   color: var(--primary-white-color);
@@ -158,9 +180,18 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: var(--typical-letter-spacing);
 }
-.item {
-  color: var(--address-color);
+.address-mail-link,
+.address-tel-link {
+  color: rgba(255, 255, 255, 0.6);
+}
+.address-text,
+.address-mail-link,
+.address-tel-link {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
+  letter-spacing: var(--typical-letter-spacing);
 }
